Base.css: save-workspace button is now visible or hidden though .js prefix as set in 0c75cf5cc1f10f1bd84a43e5cf078214202e9f65 Resolves #444

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -472,6 +472,14 @@ input.toggle-panel-toggle {
     padding: var(--spacing);
 }
 
+/* --------------------------------------------------------- workspace button (no-js) */
+#save-workspace {
+    position: absolute;
+    right: var(--spacing);
+}
+.js #save-workspace {
+    display: none;
+}
 /* --------------------------------------------------------- media queries */
 
 
